# beamcalc-rc

./: .gitignore  README.md  example.py  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
beamcalc/: __init__.py  main.py
beamcalc/application/: use_cases.py
beamcalc/application/dto/: beam_dto.py  load_dto.py  result_dto.py
beamcalc/application/interfaces/: repository_interface.py  solver_interface.py
beamcalc/application/use_cases/: add_load.py  add_support.py  create_beam.py  set_material.py  set_section.py  solve_beam.py
beamcalc/domain/: models.py  services.py
beamcalc/domain/exceptions/: domain_exceptions.py
beamcalc/domain/models/: beam.py  load.py  material.py  results.py  section.py  support.py
beamcalc/domain/physics/: deflection.py
beamcalc/domain/services/: beam_service.py  cracked_section_service.py  validation_service.py
beamcalc/domain/value_objects/: coordinates.py  geometry.py  units.py
beamcalc/infra/adapters/: anastruct_adapter.py  result_mapper.py
beamcalc/infra/calculators/: anastruct_adapter.py
beamcalc/infra/database/: connection.py  migrations.py  sqlite_repository.py
beamcalc/infra/repositories/: in_memory_repository.py  sqlite_repository.py
beamcalc/infra/solver/: anastruct_solver.py  mesh_generator.py  (+1 more)
beamcalc/interface/: beam_api.py  builder.py  facade.py
beamcalc/utils/: deflections.py
docs/: architecture.md  mcp.md
test/: test_legacy_v101.py  test_simple_v101.py
tests/integration/: test_full_beam_analysis.py
tests/unit/: test_beam.py  test_material.py  test_section.py  test_solver.py
(+11 files in other folders)
