[metadata]
name = beamcalc-rc
version = 0.1.0
author = Pedro Déo
author_email = pgalan94@gmail.com
description = Reinforced concrete beam displacements calculator in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pgalan94/beamcalc-rc
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.10